--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -5,8 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
-    sothree:umanoPanelHeight="68dp"
-    sothree:umanoShadowHeight="4dp">
+    sothree:umanoPanelHeight="56dp"
+    sothree:umanoShadowHeight="4dp"
+    sothree:umanoFadeColor="@android:color/transparent"
+    >
 
     <fragment
         android:id="@+id/map"
@@ -15,15 +17,17 @@
         android:layout_height="match_parent"
      />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.85">
-        <FrameLayout
+        android:layout_weight="0.85"
+        android:background="@color/GoDark">
+
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/GoDark"/>
-    </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:src="@drawable/logo"/>
+    </LinearLayout>
 
 
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
