--- a/app/src/main/res/drawable/toolbar_arrow.xml
+++ b/app/src/main/res/drawable/toolbar_arrow.xml
@@ -1,7 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="@color/colorPrimary"/>
-    <size android:height="@dimen/toolbarArrow_height" android:width="@dimen/toolbarArrow_width"/>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <solid android:color="@android:color/transparent"/>
+            <size android:width="2dp" android:height="48dp"/>
+        </shape>
+    </item>
 
-</shape>
+    <item android:top="20dp">
+        <rotate
+            android:fromDegrees="45"
+            android:toDegrees="45">
+            <shape android:shape="rectangle">
+                <solid android:color="#27292e"/>
+                <corners
+                    android:radius="1dp"
+                    android:topRightRadius="0dp"
+                    android:topLeftRadius="0dp"/>
+            </shape>
+        </rotate>
+    </item>
+
+    <item android:bottom="20dp">
+        <rotate
+            android:fromDegrees="-45"
+            android:toDegrees="45" >
+            <shape android:shape="rectangle">
+                <solid android:color="#27292e"/>
+                <corners android:radius="1dp"
+                    android:bottomRightRadius="0dp"
+                    android:bottomLeftRadius="0dp"/>
+            </shape>
+        </rotate>
+    </item>
+
+</layer-list>
